default/objects/Product_Plant__c/Product_Plant__c.object-meta.xml
<CustomObject>
    <label>Product Plant</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Plants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>