default/objects/Product_Plant__c/fields/Commodity_Code__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Code__c</fullName>
    <label>Commodity Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>