default/objects/Product_Plant__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>