default/objects/Product_Plant__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plant 1</fullName>
            </value>
            <value>
                <fullName>Plant 2</fullName>
            </value>
            <value>
                <fullName>Plant 3</fullName>
            </value>
            <value>
                <fullName>Plant 4</fullName>
            </value>
            <value>
                <fullName>Plant 5</fullName>
            </value>
            <value>
                <fullName>Plant 6</fullName>
            </value>
            <value>
                <fullName>Plant 7</fullName>
            </value>
            <value>
                <fullName>Plant 8</fullName>
            </value>
            <value>
                <fullName>Plant 9</fullName>
            </value>
            <value>
                <fullName>Plant 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>