default/objects/Product_Plant__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Plants</relationshipLabel>
    <relationshipName>Product_Plants</relationshipName>
    <type>Lookup</type>
</CustomField>