default/objects/Product_Plant__c/fields/SAP_Material_Ref__c.field-meta.xml
<CustomField>
    <fullName>SAP_Material_Ref__c</fullName>
    <label>SAP_Material_Ref</label>
    <length>40</length>
    <type>Text</type>
</CustomField>