default/objects/Product_Plant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>SAP_Material_Ref__c</columns>
    <columns>Plant__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>